# simple-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_with_glfw.bat  build_with_sdl.bat
include/platform/: window.h
src/: CMakeLists.txt  win32_main.cpp
src/platform/: CMakeLists.txt
src/platform/include/platform/: vulkan.h  window.h
src/platform/src/: internal_window.h
src/platform/src/win32/: win32_platform.h  win32_vulkan.cpp  win32_window.cpp
src/platform/win32/: win32_window.cpp  win32_window_glfw.cpp  win32_window_sdl.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/: renderer.h
src/renderer/include/renderer/: renderer.h
src/renderer/vulkan/: CMakeLists.txt  vk_core.h  vk_initializers.cpp  vk_initializers.h  vk_renderer.cpp  vk_swapchain.cpp  vk_swapchain.h
